--- a/index.html
+++ b/index.html
@@ -1,49 +1,198 @@
-
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Data</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>MoviesHUB - Home</title>
+    <link rel="shortcut icon" href="Images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
+
 <body>
-    <h1>Movie Data</h1>
-    <input type="text" id="movieId" placeholder="Enter Movie ID">
-    <button onclick="fetchMovieData()">Get Movie Data</button>
-    <div id="movieData"></div>
 
-    <script>
-        const apiKey = '1c86b4dd-32c2-4bd0-827a-df30c3ad34d3';
-const apiUrl = 'https://api.thetvdb.com';
+    <div class="main-container" id="top">
+        <div class="container-fluid">
+            <div class="row fixed-top text-center py-3" style="border: 2px solid red;">
+                <div class="col-sm-12">
+                    <input type="text" id="title">
+                    <button id="submit-btn">Search</button>
+                </div>
+            </div>
+            <div class="row pb-5 search-result-container" style="border:2px solid aqua;">
+                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
+                    <div class="box">
+                    </div>
+                </div>
+                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
+                    <div class="box">
+                    </div>
+                </div>
+                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
+                    <div class="box">
+                    </div>
+                </div>
+                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
+                    <div class="box">
+                    </div>
+                </div>
+                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
+                    <div class="box">
+                    </div>
+                </div>
+                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
+                    <div class="box">
+                    </div>
+                </div>
+                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
+                    <div class="box">
+                    </div>
+                </div>
+                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
+                    <div class="box">
+                    </div>
+                </div>
+                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
+                    <div class="box">
+                    </div>
+                </div>
+                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
+                    <div class="box">
+                    </div>
+                </div>
+                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
+                    <div class="box">
+                    </div>
+                </div>
+                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
+                    <div class="box">
+                    </div>
+                </div>
+                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
+                    <div class="box">
+                    </div>
+                </div>
+                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
+                    <div class="box">
+                    </div>
+                </div>
+                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
+                    <div class="box">
+                    </div>
+                </div>
+                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
+                    <div class="box">
+                    </div>
+                </div>
+                
+            </div>
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">Rate RRR</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body text-center">
 
-async function fetchMovieData() {
-    const movieId = document.getElementById('movieId').value;
-    const url = `${apiUrl}/movies/${movieId}`;
+                            <div class="stars">
+                                <svg width="40" height="40" viewbox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path class="star" d="M12 2 L9 8.5 L2 9 L7 14 L5.5 21 L12 17" fill="#fff"
+                                        stroke="black" stroke-width="1" />
+                                    <path class="star" d="M12 2 L15 8.5 L22 9 L17 14 L18.5 21 L12 17" fill="#fff"
+                                        stroke="black" stroke-width="1" />
+                                </svg>
+                                <svg width="40" height="40" viewbox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path class="star" d="M12 2 L9 8.5 L2 9 L7 14 L5.5 21 L12 17" fill="#fff"
+                                        stroke="black" stroke-width="1" />
+                                    <path class="star" d="M12 2 L15 8.5 L22 9 L17 14 L18.5 21 L12 17" fill="#fff"
+                                        stroke="black" stroke-width="1" />
+                                </svg>
+                                <svg width="40" height="40" viewbox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path class="star" d="M12 2 L9 8.5 L2 9 L7 14 L5.5 21 L12 17" fill="#fff"
+                                        stroke="black" stroke-width="0.5" />
+                                    <path class="star" d="M12 2 L15 8.5 L22 9 L17 14 L18.5 21 L12 17" fill="#fff"
+                                        stroke="black" stroke-width="0.5" />
+                                </svg>
+                                <svg width="40" height="40" viewbox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path class="star" d="M12 2 L9 8.5 L2 9 L7 14 L5.5 21 L12 17" fill="#fff"
+                                        stroke="black" stroke-width="1" />
+                                    <path class="star" d="M12 2 L15 8.5 L22 9 L17 14 L18.5 21 L12 17" fill="#fff"
+                                        stroke="black" stroke-width="1" />
+                                </svg>
+                                <svg width="40" height="40" viewbox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path class="star" d="M12 2 L9 8.5 L2 9 L7 14 L5.5 21 L12 17" fill="#fff"
+                                        stroke="black" stroke-width="1" />
+                                    <path class="star" d="M12 2 L15 8.5 L22 9 L17 14 L18.5 21 L12 17" fill="#fff"
+                                        stroke="black" stroke-width="1" />
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Submit</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    try {
-        const response = await fetch(url, {
-            headers: {
-                'Authorization': `Bearer ${apiKey}`
-            }
-        });
-        const data = await response.json();
-        displayMovieData(data);
-    } catch (error) {
-        console.error('Error fetching movie data:', error);
-    }
-}
-
-function displayMovieData(data) {
-    const movieDataDiv = document.getElementById('movieData');
-    movieDataDiv.innerHTML = `
-        <h2>${data.data.name}</h2>
-        <p><strong>Overview:</strong> ${data.data.overview}</p>
-        <p><strong>Release Date:</strong> ${data.data.releaseDate}</p>
-        <img src="${data.data.image}" alt="${data.data.name}">
-    `;
-}
-
-    </script>
+    <script src="JS/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
+
+
+<!--
+
+Movie
+
+Australia
+Brazil
+Canada
+FRance
+Germany
+India
+Indonesia
+Japan
+Russia
+United Kingdom
+United State
+
+Series
+
+Belgium
+China
+Czechia
+Denmark
+Finland
+Germany
+Greece
+Honk Kong
+Hungary
+Israel
+Mexico
+Netherlands
+Norway
+Poland
+South Africa
+South Korea
+Spain
+Sweden
+Taiwan
+Thailand
+Turkey
+
+-->
