--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="main-container" id="top">
         <div class="container-fluid">
             <div class="row fixed-top text-center py-3" style="border: 2px solid red;">
-                <div class="col-sm-12">
+                <div class="col-sm-12 px-5">
                     <input type="text" id="title">
                     <button id="submit-btn">Search</button>
                 </div>
