--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
     <title>MoviesHUB - Home</title>
     <link rel="shortcut icon" href="Images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+
+
+
 
 </head>
 
@@ -16,78 +23,26 @@
 
     <div class="main-container" id="top">
         <div class="container-fluid">
-            <div class="row fixed-top text-center py-3" style="border: 2px solid red;">
-                <div class="col-sm-12 px-5">
-                    <input type="text" id="title">
-                    <button id="submit-btn">Search</button>
+            <div class=" search-nav row fixed-top text-center py-3" style="border: 2px solid red;">
+                <div class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 px-4">
+                    <div class="input-group">
+                        <select class="input-group-text" id="category" aria-label="Default select example">
+                            <option value="movie" class="text-start">Movie</option>
+                            <option value="show" class="text-start">Series</option>
+                        </select>
+                        <input type="text" id="title" class="form-control" placeholder="Search Title eg. RRR"
+                            aria-label="Username" aria-describedby="basic-addon1">
+                        <button class="input-group-text" id="basic-addon1">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <div class="spinner-grow spinner-grow-sm d-none" role="status">
+                                <span class="visually-hidden">Loading...</span>
+                              </div>
+                        </button>
+                    </div>
                 </div>
             </div>
-            <div class="row pb-5 search-result-container" style="border:2px solid aqua;">
-                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
-                    <div class="box">
-                    </div>
-                </div>
-                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
-                    <div class="box">
-                    </div>
-                </div>
-                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
-                    <div class="box">
-                    </div>
-                </div>
-                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
-                    <div class="box">
-                    </div>
-                </div>
-                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
-                    <div class="box">
-                    </div>
-                </div>
-                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
-                    <div class="box">
-                    </div>
-                </div>
-                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
-                    <div class="box">
-                    </div>
-                </div>
-                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
-                    <div class="box">
-                    </div>
-                </div>
-                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
-                    <div class="box">
-                    </div>
-                </div>
-                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
-                    <div class="box">
-                    </div>
-                </div>
-                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
-                    <div class="box">
-                    </div>
-                </div>
-                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
-                    <div class="box">
-                    </div>
-                </div>
-                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
-                    <div class="box">
-                    </div>
-                </div>
-                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
-                    <div class="box">
-                    </div>
-                </div>
-                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
-                    <div class="box">
-                    </div>
-                </div>
-                <div class="grid col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-2">
-                    <div class="box">
-                    </div>
-                </div>
-                
+            <div class="row" style="padding-block: 100px;" id="search-result-container">
+
             </div>
             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
