--- a/index.html
+++ b/index.html
@@ -5,102 +5,60 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MoviesHUB - Home</title>
-    <link rel="shortcut icon" href="Images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="CSS/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-
-
-
-
 </head>
 
 <body>
-
-    <div class="main-container" id="top">
-        <div class="container-fluid">
-            <div class=" search-nav row fixed-top text-center py-3" style="border: 2px solid red;">
-                <div class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 px-4">
-                    <div class="input-group">
-                        <select class="input-group-text" id="category" aria-label="Default select example">
-                            <option value="movie" class="text-start">Movie</option>
-                            <option value="show" class="text-start">Series</option>
-                        </select>
-                        <input type="text" id="title" class="form-control" placeholder="Search Title eg. RRR"
-                            aria-label="Username" aria-describedby="basic-addon1">
-                        <button class="input-group-text" id="basic-addon1">
-                            <i class="fa-solid fa-magnifying-glass"></i>
-                            <div class="spinner-grow spinner-grow-sm d-none" role="status">
-                                <span class="visually-hidden">Loading...</span>
-                              </div>
-                        </button>
+    <div class="main-container">
+        <div class="container-fluid search-container" id="search-container">
+            <div class="row py-3 position-fixed w-100 search-bar">
+                <div class="col-sm-12 col-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                            aria-describedby="basic-addon1">
+                        <span class="input-group-text" id="basic-addon1"><i
+                                class="fa-solid fa-magnifying-glass"></i></span>
                     </div>
                 </div>
             </div>
-            <div class="row" style="padding-block: 100px;" id="search-result-container">
+
+            <div class="row" id="search-result-container">
 
             </div>
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel">Rate RRR</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body text-center">
 
-                            <div class="stars">
-                                <svg width="40" height="40" viewbox="0 0 24 24" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path class="star" d="M12 2 L9 8.5 L2 9 L7 14 L5.5 21 L12 17" fill="#fff"
-                                        stroke="black" stroke-width="1" />
-                                    <path class="star" d="M12 2 L15 8.5 L22 9 L17 14 L18.5 21 L12 17" fill="#fff"
-                                        stroke="black" stroke-width="1" />
-                                </svg>
-                                <svg width="40" height="40" viewbox="0 0 24 24" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path class="star" d="M12 2 L9 8.5 L2 9 L7 14 L5.5 21 L12 17" fill="#fff"
-                                        stroke="black" stroke-width="1" />
-                                    <path class="star" d="M12 2 L15 8.5 L22 9 L17 14 L18.5 21 L12 17" fill="#fff"
-                                        stroke="black" stroke-width="1" />
-                                </svg>
-                                <svg width="40" height="40" viewbox="0 0 24 24" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path class="star" d="M12 2 L9 8.5 L2 9 L7 14 L5.5 21 L12 17" fill="#fff"
-                                        stroke="black" stroke-width="0.5" />
-                                    <path class="star" d="M12 2 L15 8.5 L22 9 L17 14 L18.5 21 L12 17" fill="#fff"
-                                        stroke="black" stroke-width="0.5" />
-                                </svg>
-                                <svg width="40" height="40" viewbox="0 0 24 24" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path class="star" d="M12 2 L9 8.5 L2 9 L7 14 L5.5 21 L12 17" fill="#fff"
-                                        stroke="black" stroke-width="1" />
-                                    <path class="star" d="M12 2 L15 8.5 L22 9 L17 14 L18.5 21 L12 17" fill="#fff"
-                                        stroke="black" stroke-width="1" />
-                                </svg>
-                                <svg width="40" height="40" viewbox="0 0 24 24" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path class="star" d="M12 2 L9 8.5 L2 9 L7 14 L5.5 21 L12 17" fill="#fff"
-                                        stroke="black" stroke-width="1" />
-                                    <path class="star" d="M12 2 L15 8.5 L22 9 L17 14 L18.5 21 L12 17" fill="#fff"
-                                        stroke="black" stroke-width="1" />
-                                </svg>
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Submit</button>
-                        </div>
-                    </div>
-                </div>
+        </div>
+        <div class="nav">
+            <h1><a href="">MoviesHUB</a></h1>
+            <div class="nav-list" id="nav-list">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Home</a></li>
+                </ul>
+            </div>
+            <div class="button-group">
+                <a href="" class="button search" id="search"><i class="fa-solid fa-magnifying-glass"></i></a>
+                <a href="" class="button toggle" id="toggle"><i class="fa-solid fa-caret-down"></i></a>
             </div>
         </div>
     </div>
-
+    <script>
+        document.getElementById('toggle').addEventListener('click', function (event) {
+            event.preventDefault();
+            document.getElementById('nav-list').classList.toggle('active');
+            this.classList.toggle('active');
+        })
+        document.getElementById('search').addEventListener('click', function (event) {
+            event.preventDefault();
+            document.getElementById('search-container').classList.add('active');
+        })
+    </script>
     <script src="JS/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
