--- a/index.html
+++ b/index.html
@@ -12,31 +12,32 @@
 </head>
 
 <body>
-    <div class="container" id="cont">
-        <div class="menu" id="menu">
-            <button id="close-menu"><i class="fa-solid fa-xmark"></i></button>
+    <div id="mainContainer" class="mainContainer">
+        <div id="menuContainer" class="menuContainer">
+            <button id="closeMenuContainerButton"><i class="fa-solid fa-xmark"></i></button>
             <ul>
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="trending.html">Trending</a></li>
-                <li><a href="#">Popular</a></li>
-                <li><a href="#">Anticipated</a></li>
+                <li><a href="popular.html">Popular</a></li>
+                <li><a href="upcoming.html.html">Upcoming</a></li>
+                <li><a href="anticipated.html">Anticipated</a></li>
                 <li><a href="library.html">Library</a></li>
             </ul>
         </div>
 
-        <div class="search-container" id="search-container">
-            <button id="close-search"><i class="fa-solid fa-xmark"></i></button>
+        <div id="searchContainer" class="searchContainer">
+            <button id="closeSearchContainerButton"><i class="fa-solid fa-xmark"></i></button>
             <input type="text" placeholder="Enter Your Text Here...">
-            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+            <button id="searchButton"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
 
-        <div class="navbar" id="nav">
-            <button id="open-menu"><i class="fa-solid fa-bars"></i></button>
+        <div id="navbarContainer" class="navbarContainer">
+            <button id="openMenuContainerButton"><i class="fa-solid fa-bars"></i></button>
             <h1>MoviesHUB</h1>
-            <button id="open-search"><i class="fa-solid fa-magnifying-glass"></i></button>
+            <button id="openSearchContainerButton"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
-        <div class="banner">
-            <div class="banner-cover">
+        <div class="bannerContainer">
+            <div class="bannerCover">
                 <h1>Get Trending, Upcoming and Popular Movies and series</h1>
             </div>
         </div>
