--- a/index.html
+++ b/index.html
@@ -37,19 +37,16 @@
             <button id="openSearchContainerButton"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
         <div class="bannerContainer">
-            <div class="bannerCover">
-                <h1>Get Trending, Upcoming and Popular Movies and series</h1>
+            <h1>Get Trending, Upcoming and Popular Movies and series</h1>
+        </div>
+        <div class="box">
+            <div class="trending-section">
             </div>
         </div>
-        <div class="section-cont">
-            <div class="box">
-                <div class="trending-section">
-                </div>
-            </div>
+        <div class="sectionContainer">
             <div class="section">
                 <h2>Trending Now</h2>
-                <div class="slider" id="container">
-                </div>
+                <div class="slider" id="container"></div>
             </div>
         </div>
         <div class="section-cont">
