--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Movie/Show Poster</title>
+    <title>CineHUB - Discover.Track.Explore</title>
     <link rel="shortcut icon" href="Images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -18,13 +18,14 @@
             <a href=""><img src="Images/favicon.png" height="60" alt=""></a>
             <ul>
                 <li id="navbarMenuContainerButton"><i class="fa-solid fa-bars"></i>
-                <div id="navbarMenuContainer">
-                    <ul>
-                        <li><a href="">Movies</a></li>
-                        <li><a href="">Series</a></li>
-                        <li><a href="">Library</a></li>
-                    </ul>
-                </div>
+                    <div id="navbarMenuContainer">
+                        <ul>
+                            <li><a href="">Movies</a></li>
+                            <li><a href="">Series</a></li>
+                            <li><a href="">Library</a></li>
+                            <li><a href="">Favourite</a></li>
+                        </ul>
+                    </div>
                 </li>
                 <li><i class="fa-solid fa-magnifying-glass"></i></li>
             </ul>
@@ -35,49 +36,25 @@
                     <img src="Images/favicon.png" height="150" alt="">
                     <h1>Cine<span>HUB</span></h1>
                 </div>
-                <h2><span>Discover</span> what's hot and where to stream it. <span>Track</span> series and movies you watch. <span>Explore</span> latest, upcoming releases.</h2>
+                <h2><span>Discover</span> what's hot and where to stream it. <span>Track</span> series and movies you
+                    watch. <span>Explore</span> latest, upcoming releases.</h2>
             </div>
         </div>
         <div id="curveContainer">
             <div id="curve"></div>
         </div>
+        <div id="sectionContainer">
+            <h2>Trending Now</h2>
+            <div class="sectionSlider" id="trendingSection"></div>
+            <h2>Popular Now</h2>
+            <div class="sectionSlider" id="popularSection"></div>
+            <h2>Upcoming</h2>
+            <div class="sectionSlider" id="upcomingSection"></div>
+            <h2>Most Anticipated</h2>
+            <div class="sectionSlider" id="anticipatedSection"></div>
+        </div>
     </div>
-
-    <script>
-        async function getRandomPoster() {
-            const clientId = 'cdcf192406f8361d8a02e82e99c86ffde257a7f55f52f5833804e48f3d252da8';
-            const randomType = Math.random() < 0.5 ? 'movies' : 'shows';
-            const url = `https://api.trakt.tv/${randomType}/trending?extended=full,images`;
-
-            try {
-                const response = await fetch(url, {
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'trakt-api-version': '2',
-                        'trakt-api-key': clientId
-                    }
-                });
-
-                const data = await response.json();
-                console.log(data);
-                const randomItem = data[Math.floor(Math.random() * 5)];
-                let posterUrl;
-                if (randomType == 'movies') {
-
-                    posterUrl = randomItem.movie.images.fanart[0];
-                }
-                else {
-
-                    posterUrl = randomItem.show.images.fanart[0];
-                }
-                const posterDiv = document.getElementById('bannerContainer');
-                posterDiv.style.backgroundImage = `url("https://${posterUrl}")`;
-            } catch (error) {
-                console.error('Error fetching the poster:', error);
-            }
-        }
-        getRandomPoster();
-    </script>
+    <script src="JS/index.js"></script>
 </body>
 
 </html>
