--- a/library.html
+++ b/library.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CineHUB - Discover.Track.Explore</title>
+    <title>CineHUB - Library</title>
     <link rel="shortcut icon" href="Images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -32,6 +32,7 @@
                 <li id="navbarMenuContainerButton"><i class="fa-solid fa-bars"></i>
                     <div id="navbarMenuContainer">
                         <ul>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="movies.html">Movies</a></li>
                             <li><a href="series.html">Series</a></li>
                             <li><a href="library.html">Library</a></li>
@@ -42,32 +43,10 @@
                 <li id="navbarMenuContainerSearchButton"><i class="fa-solid fa-magnifying-glass"></i></li>
             </ul>
         </div>
-        <div id="bannerContainer">
-            <div id="bannerContentContainer">
-                <div id="bannerLogoContainer">
-                    <img src="Images/favicon.png" height="150" alt="CineHUB Logo">
-                    <h1>Cine<span>HUB</span></h1>
-                </div>
-                <h2><span>Discover</span> what's hot and where to stream it. <span>Track</span> series and movies you
-                    watch. <span>Explore</span> latest, upcoming releases.</h2>
-            </div>
-        </div>
-        <div id="curveContainer">
-            <div id="curve"></div>
-        </div>
-        <div id="sectionContainer">
-            <h2>Trending Now</h2>
-            <div class="sectionSlider" id="trendingSection"></div>
-            <h2>Popular Now</h2>
-            <div class="sectionSlider" id="popularSection"></div>
-            <h2>Upcoming</h2>
-            <div class="sectionSlider" id="upcomingSection"></div>
-            <h2>Most Anticipated</h2>
-            <div class="sectionSlider" id="anticipatedSection"></div>
-        </div>
+        <div id="libraryContainer"></div>
     </div>
     <script src="JS/script.js"></script>
-    <script src="JS/index.js"></script>
+    <script src="JS/library.js"></script>
 </body>
 
 </html>
