--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div id="root" class="container vh-100 overflow-auto"></div>
+  <div id="root" class="container-fluid"></div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
     crossorigin="anonymous"></script>
