--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body class="h-screen overflow-hidden">
-  <div id="root" class="h-screen bg-black overflow-auto"></div>
+  <div id="root" class="h-screen bg-black overflow-auto select-none"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
